Ajustando docker-compose